# SPDX-License-Identifier: GPL-2.0-only
#
# Copyright 2020 J Rick Ramstetter, rick.ramstetter@gmail.com
#
# This file is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License, version 2
# as published by the Free Software Foundation.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.

project ('cpp-member-test', 'cpp', version : '1', license: 'GPLv2')
sources = ['main.cpp']
compiler = meson.get_compiler('cpp')

executable ('cpp-member-test', sources)
